Using Digest header.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py3
+envlist = py37
 skipsdist = True
 
 [testenv]
@@ -7,9 +7,13 @@ skipsdist = True
 deps = -rrequirements.txt
     -rtest-requirements.txt
 
+commands =
+  nosetests {posargs} tests
+
+
 [testenv:refactor]
 commands =
-  isort -y openapi
-  autoflake -r --remove-all-unused-imports --remove-unused-variables --in-place openapi
-  black -l 78 openapi
-  flake8 openapi
+  isort -y openapi tests
+  autoflake -r --remove-all-unused-imports --remove-unused-variables --in-place openapi tests
+  black -l 78 openapi tests
+  flake8 openapi tests
