--- a/openapi/service-provider.yaml
+++ b/openapi/service-provider.yaml
@@ -1,9 +1,37 @@
+#
+# Questo e' un progetto d'esempio in formato OpenAPI 3.0 API Starter Kit.
+#
+# Stai per sviluppare un API? Segui attentamente questo template e
+#   potrai integrarla facilmente in Developers Italia.
+#
+x-commons:
+  ratelimit-headers: &ratelimit-headers
+    X-RateLimit-Limit:
+      $ref: '#/components/headers/X-RateLimit-Limit'
+    X-RateLimit-Remaining:
+      $ref: '#/components/headers/X-RateLimit-Remaining'
+    X-RateLimit-Reset:
+      $ref: '#/components/headers/X-RateLimit-Reset'
+  common-responses: &common-responses
+    '400':
+      $ref: '#/components/responses/400BadRequest'
+    '429':
+      $ref: '#/components/responses/429TooManyRequests'
+    '503':
+      $ref: '#/components/responses/503ServiceUnavailable'
+    default:
+      $ref: '#/components/responses/default'
+
 openapi: 3.0.0
 info:
-  contact:
-    email: robipolli@gmail.com
-    name: Roberto Polli
-    url: https://twitter.com/ioggstream
+  version: "1.0.0"
+  # Il `title` e' il nome del tuo prodotto/servizio!
+  # E' la prima cosa ad apparire in pagine web e cataloghi.
+  # Dev'essere chiaro e conciso.
+  title: |-
+    Ora esatta.
+  x-summary: >-
+    Questo servizio ritorna la data e l'ora attuali in UTC.
   description: |
     #### Documentazione
     Il servizio Ora esatta ritorna l'ora del server in formato RFC5424 (syslog).
@@ -28,200 +56,149 @@ info:
       'datetime': '2018-12-30T12:23:32Z'
     }
     ```
+
+  # I termini del servizio contengono un riferimento
+  #   a tutte le indicazioni e le note legali per l'utilizzo
+  #   del servizio, inclusi gli eventuali riferimenti utili al GDPR.
+  termsOfService: 'http://swagger.io/terms/'
+  # Chi posso contattare per informazioni sul servizio e sul suo stato?
+  contact:
+    email: robipolli@gmail.com
+    name: Roberto Polli
+    url: https://twitter.com/ioggstream
+  # L'audience delle API. Attualmente e' definito solamente
+  #   la tipologia `public`.
+  x-audience:
+    - public
+  # Ogni API deve avere un UUID, invariante nel tempo e
+  #   rispetto al `title`.
+  x-api-id: 00000000-0000-0000-0000-000000000000
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Ora esatta.
-  version: 1.0.0
-  x-api-id: 00000000-0000-0000-0000-000000000000
-  x-audience:
-  - public
-  x-summary: Questo servizio ritorna la data e l'ora attuali in UTC.
-servers:
-- description: Test server
-  url: https://api.example.com/
-- description: Development server
-  url: https://localhost:8443/datetime/v1
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
+# Una lista di `tag` utili a raggruppare le varie operazioni
+#   eseguite dalle API. Ogni `tag` puo' referenziare un link
+#   alla sua descrizione.
 tags:
-- description: Retrieve informations
-  externalDocs:
-    url: http://docs.my-api.com/pet-operations.htm
-  name: public
+  - name: public
+    description: Retrieve informations
+    externalDocs:
+      url: http://docs.my-api.com/pet-operations.htm
+# Uno o piu' server di erogazione.
+#   Puo' essere utile indicare gli indirizzi di collaudo,
+#   sviluppo e test.
+servers:
+  - description: Development server
+    url: https://localhost:8443/datetime/v1
+  - description: Test server
+    url: https://api.example.com/datetime/v1
+
+#
+# Qui vanno tutti i path.
+#
 paths:
-  /:
-    get:
-      operationId: openapi.index
-      responses:
-        200:
-          content:
-            text/html: {}
-          description: foo
-      summary: metadata
   /echo:
     get:
+      summary: Ritorna un timestamp in formato RFC5424.
       description: |
         Ritorna un timestamp in formato RFC5424
         prendendola dal server attuale.
       operationId: openapi.get_echo
+      tags:
+        - public
       responses:
+        <<: *common-responses
         '200':
+          description: |
+            Il server ha ritornato il timestamp.
+          # Questi header di throttling sono obbligatori e definiti
+          #   nel Nuovo modello di interoperabilità.
+          headers:
+            <<: *ratelimit-headers
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Timestamps'
-          description: |
-            Il server ha ritornato il timestamp.
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/X-RateLimit-Limit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/X-RateLimit-Remaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/X-RateLimit-Reset'
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '429':
-          $ref: '#/components/responses/429TooManyRequests'
-        '503':
-          $ref: '#/components/responses/503ServiceUnavailable'
-        default:
-          $ref: '#/components/responses/default'
-      summary: Ritorna un timestamp in formato RFC5424.
+  /status:
+    get:
+      summary: Ritorna lo stato dell'applicazione.
+      description: |
+        Ritorna lo stato dell'applicazione. A scopo
+        di test, su base randomica puo' ritornare
+        un errore.
+      operationId: openapi.get_status
       tags:
-      - public
+        - public
+      responses:
+        <<: *common-responses
+        '200':
+          description: |
+            Il server ha ritornato lo status. In caso di problemi
+            ritorna sempre un problem+json.
+          # Questi header di throttling sono obbligatori e definiti
+          #   nel Nuovo modello di interoperabilità.
+          headers:
+            <<: *ratelimit-headers
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+  /data:
+    post:
+      summary: ritorna il payload ricevuto
+      description: |
+        ritorna il payload ricevuto col digest
+        associato
+      operationId: openapi.post_data
+      requestBody:
+        content:
+          application/json:
+            schema: {}
+      responses:
+        <<: *common-responses
+        '200':
+           description: |
+             ecco il body
+           headers:
+             <<: *ratelimit-headers
+           content:
+             application/json:
+               schema:
+                 type: object
+
 components:
+
   headers:
-    Retry-After:
-      description: |-
-        Retry contacting the endpoint *at least* after seconds.
-        See https://tools.ietf.org/html/rfc7231#section-7.1.3
-      schema:
-        format: int32
-        type: integer
     X-RateLimit-Limit:
-      description: The number of allowed requests in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/headers/X-RateLimit-Limit'
     X-RateLimit-Remaining:
-      description: The number of remaining requests in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/headers/X-RateLimit-Remaining'
     X-RateLimit-Reset:
-      description: The number of seconds left in the current period
-      schema:
-        format: int32
-        type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/headers/X-RateLimit-Reset'
+    Retry-After:
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/headers/Retry-After'
+
   responses:
+    # Predefined error codes for this API
     400BadRequest:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Bad Request
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/responses/400BadRequest'
     404NotFound:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Not Found
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/responses/404NotFound'
     429TooManyRequests:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Too many requests
-      headers:
-        Retry-After:
-          description: |-
-            Retry contacting the endpoint *at least* after seconds.
-            See https://tools.ietf.org/html/rfc7231#section-7.1.3
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Limit:
-          description: The number of allowed requests in the current period
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Remaining:
-          description: The number of remaining requests in the current period
-          schema:
-            format: int32
-            type: integer
-        X-RateLimit-Reset:
-          description: The number of seconds left in the current period
-          schema:
-            format: int32
-            type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/responses/429TooManyRequests'
     503ServiceUnavailable:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Service Unavailable
-      headers:
-        Retry-After:
-          description: |-
-            Retry contacting the endpoint *at least* after seconds.
-            See https://tools.ietf.org/html/rfc7231#section-7.1.3
-          schema:
-            format: int32
-            type: integer
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/responses/503ServiceUnavailable'
     default:
-      content:
-        application/problem+json:
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Unexpected error
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/responses/default'
+
   schemas:
     Problem:
-      properties:
-        detail:
-          description: |
-            A human readable explanation specific to this occurrence of the
-            problem.
-          example: Connection to database timed out
-          type: string
-        instance:
-          description: |
-            An absolute URI that identifies the specific occurrence of the problem.
-            It may or may not yield further information if dereferenced.
-          format: uri
-          type: string
-        status:
-          description: |
-            The HTTP status code generated by the origin server for this occurrence
-            of the problem.
-          example: 503
-          exclusiveMaximum: true
-          format: int32
-          maximum: 600
-          minimum: 100
-          type: integer
-        title:
-          description: |
-            A short, summary of the problem type. Written in english and readable
-            for engineers (usually not suited for non technical stakeholders and
-            not localized); example: Service Unavailable
-          type: string
-        type:
-          default: about:blank
-          description: |
-            An absolute URI that identifies the problem type.  When dereferenced,
-            it SHOULD provide human-readable documentation for the problem type
-            (e.g., using HTML).
-          example: https://tools.ietf.org/html/rfc7231#section-6.6.4
-          format: uri
-          type: string
-      type: object
+      $ref: 'https://teamdigitale.github.io/openapi/0.0.5/definitions.yaml#/schemas/Problem'
     Timestamps:
+      type: object
       description: Un Timestamp in RFC5424
       properties:
         timestamp:
-          example: '2018-12-30T12:23:32Z'
-          format: date-time
           type: string
-      type: object
+          format: date-time
+          example: '2018-12-30T12:23:32Z'
