--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "3.0"
 services:
+  # web-ui at:  http://172.24.0.2:16686/jaeger
   jaeger:
     environment:
       COLLECTOR_ZIPKIN_HTTP_PORT: 9411
     image: jaegertracing/all-in-one:1.10
     ports:
     - "16686:16686"
-    - "14268:14268" 
-    - "9411:9411" 
+    - "14268:14268"
+    - "9411:9411"
 
   api:
     build: .
