--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,11 @@ skipsdist = True
 deps = -rrequirements.txt
     -rtest-requirements.txt
 
+setenv =
+    PYTHONPATH = :.
+
 commands =
-  nosetests {posargs} tests
+  nosetests {posargs} -w tests
 
 
 [testenv:refactor]
